# pgadmin4-desktop-mode

./: .gitignore  LICENSE  README.md  setup.cfg
src/pgadmin4_desktop_mode/: __init__.py  __main__.py
