[metadata]
name = pgadmin4_desktop_mode
version = 0.0.1
author = Anselm Kruis
author_email = anselm.kruis@atos.net
description = Run pgdamin4 in desktop mode
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/science-computing/pgadmin4-desktop-mode
project_urls =
    Bug Tracker = https://github.com/science-computing/pgadmin4-desktop-mode/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: PostgreSQL License
    Operating System :: OS Independent
    Topic :: Database :: Front-Ends

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6.0
install_requires =
    pgadmin4
    simple-websocket

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pgadmin4_desktop_mode = pgadmin4_desktop_mode:main
